Se emplean servicios para crear resultados y competencias y se crea relacion para traer estos datos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,12 @@ quarkus.log.category."org.mongodb.driver.client".level = OFF
 quarkus.log.level = INFO
 quarkus.log.min-level = ALL
 
+#------------------------ Swagger (No configmap)-----------------------------#
+
+quarkus.swagger-ui.path = swagger
+quarkus.swagger-ui.always-include = true
+quarkus.swagger-ui.display-operation-id = true
+quarkus.swagger-ui.default-models-expand-depth = -1
+quarkus.swagger-ui.theme = original
+quarkus.swagger-ui.title = Swagger | INTEGRATION | SENA@SANF
+quarkus.swagger-ui.footer = © 2023 SENA_SANF | All rights reserved
