--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,16 @@
       <artifactId>dotenv-java</artifactId>
       <version>2.2.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.bouncycastle</groupId>
+      <artifactId>bcprov-jdk15on</artifactId>
+      <version>1.69</version>
+    </dependency>
+    <dependency>
+      <groupId>jakarta.persistence</groupId>
+      <artifactId>jakarta.persistence-api</artifactId>
+      <version>3.1.0</version>
+    </dependency>
     <!-- End Data -->
 
     <!-- DataBase -->
